# FstSoftware

./: .gitignore  CMakeLists.txt  FstChannelMap.txt  FstGlbGeomChannelMap.txt  README.md  cmnGroup.txt  fstBuilder.cxx  genCMNGroup.C  readEvent.C
FstBiasCurrent/: Ana_data_2017.ipynb  Ana_data_2017.py  plotBiasCurrent.C  plotBiasCurrentRun22.C  plotBiasCurrentRun23.C
FstBiasCurrent/data/: getDataMpod01Iseg0.sh  getDataMpod01Iseg0Run22.sh  getDataMpod01Iseg0Run23.sh  getDataMpod01Iseg1.sh  getDataMpod01Iseg1Run22.sh  getDataMpod01Iseg1Run23.sh  getDataMpod01Iseg2.sh  getDataMpod01Iseg2Run22.sh  getDataMpod01Iseg2Run23.sh  getDataMpod02Iseg0.sh  getDataMpod02Iseg0Run22.sh  getDataMpod02Iseg0Run23.sh  getDataMpod02Iseg1.sh  getDataMpod02Iseg1Run22.sh  getDataMpod02Iseg1Run23.sh  getDataMpod02Iseg2.sh  getDataMpod02Iseg2Run22.sh  getDataMpod02Iseg2Run23.sh  getDataMpod03Iseg0.sh  getDataMpod03Iseg0Run22.sh  getDataMpod03Iseg0Run23.sh  getDataMpod03Iseg1.sh  getDataMpod03Iseg1Run22.sh  getDataMpod03Iseg1Run23.sh  getDataMpod03Iseg2.sh  getDataMpod03Iseg2Run22.sh  getDataMpod03Iseg2Run23.sh
FstOffline/: bfc_calib.C  runBFC_fstCalib.sh  runBFC_fstOfl.sh  runBFC_fstRawHit.sh
FstOffline/macro/: fstHits.h  plot.C  run.C  testOfflineMapping.C
FstOnlineMonitor/: FstGlbElecChannelMap.txt  fstBuilder.cxx  fstBuilder.h  testFstMap.C
FstOnlineZS/: ARMdisplay.C  README.markdown  genPedestal.C  plotAdc.C  plotPedestal.C  testOnlineZS.C
FstSlowControl/: .gitignore
FstTracking/: CMakeLists.txt  README.md
FstTracking/list/FST/: genDataList.sh  genPedHighVoltage.sh  splitCluster.sh  splitData_time.sh
FstTracking/macros/FstClusterMaker/: fstCluster.sh  loopAll.sh
FstTracking/macros/FstMcProjection/: FstMcProjection_Sensor.C  calProjResolution.C  plotMcHitsDisplay.C  plotMcProjection.C
FstTracking/macros/FstNoiseStudy/: doFstChipTempNoiseStudy.C  doFstSensorDataNoiseStudy.C  fstSensorDataNoiseStudy.sh  genChannelMap.C  loopSensorDataNoise.sh  plotNoiseQA.C
FstTracking/macros/FstPlotMacro/: plotMatchedScanClusterSignalSensor.C  plotNoiseChannel.C  plotResidualsRecoHitStudy.C  plotResidualsThTbStudy.C  plotSignalQARecoHitStudy.C  plotSignal_WireBond.C
FstTracking/macros/FstPlotNoiseStudy/: plotIstSensorPedNoiseComparison.C  plotNoiseChannel.C  plotNoiseTemp.C  plotSensorPedNoiseQA.C
FstTracking/macros/FstPlotReviewAug2020/: plotSignalQA.C
FstTracking/macros/FstPlotSignalStudy/: calTrackClusterEfficiencyModule_2Layer.C  plotEfficiencyHV.C  plotSignalHVScan.C
FstTracking/macros/FstPlotTimeSequence/: plotSignalTS_HV140V.C  plotSignalTS_HV140V_APV.C  plotSignalTS_HV140V_Reco70V.C  plotSignalTS_HV200V.C
FstTracking/macros/FstQAStudy/: doFstQAStudy.C  doFstQAStudy_timesequence.C  loopAll_timesequence.sh
FstTracking/macros/FstTracking/: doFstTracking.C  fstTracking_timesequence.sh  getAlignment_ISTHits.C  loopAll.sh
FstTracking/macros/FstUtil/: genCluster.C  testCluster.C
FstTracking/macros/IstTracking/: plotTrackRes.C
FstTracking/macros/LaserOperation/: Controls-prime.cpp  scan.sh
FstTracking/src/FstClusterMaker/: FstClusterMaker.h  FstClusterMakerLinkDef.h
FstTracking/src/FstNoiseStudy/: FstNoiseStudyLinkDef.h  channelMap.txt
FstTracking/src/FstQAStudy/: FstQAStudy.cxx
FstTracking/src/FstUtil/: CMakeLists.txt  FstClusterLinkDef.h  FstEvent.cxx  FstRawHit.h  FstRawHitLinkDef.h  FstTrackLinkDef.h
FstTracking/src/IstTracking/: IstTrackingCons.h  IstTrackingLinkDef.h
GUI/expert-GUI/: FstPowerSupply.adl  FstRampHVMpod01.sh  FstRampHVMpod02.sh  hv_status_overview.adl  iseg.adl  iseg_master_monitor.adl  iseg_ramp_controls.adl
GUI/shift-GUI/: FstControl.sh  FstOff.sh  FstOn.adl  FstOn.sh  FstShiftCrew.adl  FstShutDown.adl  FstShutDown.sh
IOC/FSTMPOD01/: PASSWORDS  README
IOC/FSTMPOD02/: RELEASE_NOTES  TEST_gmt_h.csv.something  cfg  fgtMount.sh  istMount.sh
IOC/FSTMPOD03/: README.firewall_config  README_FGT_HV  istmpod02_display
list/FST/: DateHV140V.list  DateHV200V.list  FstCluster_HV140V.list  FstCluster_HV140V_withPed.list  FstCluster_HV140V_withPed_Th3Tb1.list  FstCluster_HV140V_withPed_Th3Tb2.list  FstCluster_HV140V_withPed_Th3Tb3.list  FstCluster_HV140V_withPed_Th4o5Tb1.list  FstCluster_HV140V_withPed_Th4o5Tb2.list  FstCluster_HV140V_withPed_Th4o5Tb3.list  FstCluster_HV200V.list  FstCluster_HV200V_withPed.list  FstCluster_HV200V_withPed_Th3Tb1.list  FstCluster_HV200V_withPed_Th3Tb2.list  FstCluster_HV200V_withPed_Th3Tb3.list  FstCluster_HV200V_withPed_Th4o5Tb1.list  FstCluster_HV200V_withPed_Th4o5Tb2.list  FstCluster_HV200V_withPed_Th4o5Tb3.list  FstCluster_HV70V_withPed.list  FstCluster_HV70V_withPed_Th3Tb1.list  FstCluster_HV70V_withPed_Th3Tb2.list  FstCluster_HV70V_withPed_Th3Tb3.list  FstCluster_HV70V_withPed_Th4o5Tb1.list  FstCluster_HV70V_withPed_Th4o5Tb2.list  FstCluster_HV70V_withPed_Th4o5Tb3.list  FstClusters_HV140.list  FstData_HV140.list  FstData_HV140V.list  FstData_HV200V.list  FstData_HV70.list  FstData_HV70V.list  FstPed_HV100.list  FstPed_HV100V.list  FstPed_HV120.list  FstPed_HV120V.list  FstPed_HV140.list  FstPed_HV140V.list  FstPed_HV160.list  FstPed_HV160V.list  FstPed_HV200V.list  (+29 more)
list/IST/: IstTracking.list
macros/: ARMdisplay.C  IstTracking.root  doIstTracking.C
macros/FstClusterMaker/: fstCluster.sh  fstCluster_timesequence.sh  loopAll.sh  loopAll_timesequence.sh  makeFstCluster.C  makeFstCluster_timesequence.C
macros/FstMcProjection/: FstMcProjection.C  FstMcProjection_Sensor.C  calMcEfficiency.C  crosstalkRate.txt  plotCosmicAngle.C  plotDataCrossTalk.C  plotMcEffComparison.C  plotMcHitsDisplay.C  plotMcProjError.C  plotMcProjection.C
macros/FstNoiseStudy/: plotNoiseQA.C  (+11 more)
src/FstClusterMaker/: CMakeLists.txt  FstClusterMaker.cxx  FstClusterMaker.h  FstClusterMakerLinkDef.h
src/FstNoiseStudy/: CMakeLists.txt  FstNoiseStudy.cxx  FstNoiseStudy.h
src/FstQAStudy/: CMakeLists.txt  FstQAStudy.cxx  FstQAStudy.h  FstQAStudyLinkDef.h
src/FstTracking/: CMakeLists.txt  FstTracking.cxx  FstTracking.h  FstTrackingCons.h  FstTrackingLinkDef.h
src/IstTracking/: CMakeLists.txt  IstTracking.cxx  IstTracking.h  IstTrackingCons.h
(+1051 files in other folders)
